début style footer

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <!-- footer -->
     <footer>
       <!-- gauche -->
-      <div>
+      <div class="left">
         &copy; 2019 - <a target="_blank" href="http://www.kevinniel.fr" title="Kévin NIEL">Kévin NIEL</a>
       </div>
       <!-- droite -->
-      <div>
-        <ul>
+      <div class="right">
+        <ul class="footer_links">
           <li>
             <a href="#" title="Mentions légales">Mentions légales</a>
           </li>
