--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </header>
 
     <!-- section image & titre -->
-    <section>
-      <h1>Bienvenue sur le blog de Campus Academy</h1>
+    <section class="header_title">
+      <h1>Bienvenue sur le blog de <br /> Campus Academy</h1>
     </section>
 
     <!-- bloc du milieu -->
-    <div>
+    <div style="height: 3000px;">
       <!-- bloc de gauche -->
       <aside>
         <!-- bloc article -->
