--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>CA Blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css"></link>
   </head>
   <!-- Corp du HTML -->
