debut style asides

--- a/index.html
+++ b/index.html
@@ -48,30 +48,30 @@
     </section>
 
     <!-- bloc du milieu -->
-    <div style="height: 3000px;">
+    <div class="mid_block">
       <!-- bloc de gauche -->
       <aside>
         <!-- bloc article -->
-        <div>
+        <article>
           <!-- titre -->
           <span>article 1</span>
           <!-- date -->
           <span>20/11/2019</span>
-        </div>
+        </article>
         <!-- bloc article -->
-        <div>
+        <article>
           <!-- titre -->
           <span>article 2</span>
           <!-- date -->
           <span>23/11/2019</span>
-        </div>
+        </article>
         <!-- bloc article -->
-        <div>
+        <article>
           <!-- titre -->
           <span>article 3</span>
           <!-- date -->
           <span>26/11/2019</span>
-        </div>
+        </article>
       </aside>
 
       <!-- bloc de droite -->
