ajout images articles

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
       <!-- bloc de gauche -->
       <aside>
         <!-- bloc article -->
-        <article>
+        <article style="background-image: url('assets/images/bitcoin.jpg');">
           <!-- titre -->
           <span>article 1</span>
           <!-- date -->
           <span>20/11/2019</span>
         </article>
         <!-- bloc article -->
-        <article>
+        <article style="background-image: url('assets/images/ca.jpg');">
           <!-- titre -->
           <span>article 2</span>
           <!-- date -->
           <span>23/11/2019</span>
         </article>
         <!-- bloc article -->
-        <article>
+        <article style="background-image: url('assets/images/course.jpg');">
           <!-- titre -->
           <span>article 3</span>
           <!-- date -->
