gestion des titres des articles

--- a/index.html
+++ b/index.html
@@ -53,24 +53,30 @@
       <aside>
         <!-- bloc article -->
         <article style="background-image: url('assets/images/bitcoin.jpg');">
-          <!-- titre -->
-          <span>article 1</span>
-          <!-- date -->
-          <span>20/11/2019</span>
+          <div>
+            <!-- titre -->
+            <span class="title">article 1</span>
+            <!-- date -->
+            <span class="date">20/11/2019</span>
+          </div>
         </article>
         <!-- bloc article -->
         <article style="background-image: url('assets/images/ca.jpg');">
-          <!-- titre -->
-          <span>article 2</span>
-          <!-- date -->
-          <span>23/11/2019</span>
+          <div>
+            <!-- titre -->
+            <span>article 2</span>
+            <!-- date -->
+            <span>23/11/2019</span>
+          </div>
         </article>
         <!-- bloc article -->
         <article style="background-image: url('assets/images/course.jpg');">
-          <!-- titre -->
-          <span>article 3</span>
-          <!-- date -->
-          <span>26/11/2019</span>
+          <div>
+            <!-- titre -->
+            <span>article 3</span>
+            <!-- date -->
+            <span>26/11/2019</span>
+          </div>
         </article>
       </aside>
 
