gestion des titres des articles

--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
         <article style="background-image: url('assets/images/ca.jpg');">
           <div>
             <!-- titre -->
-            <span>article 2</span>
+            <span class="title">article 2</span>
             <!-- date -->
-            <span>23/11/2019</span>
+            <span class="date">23/11/2019</span>
           </div>
         </article>
         <!-- bloc article -->
         <article style="background-image: url('assets/images/course.jpg');">
           <div>
             <!-- titre -->
-            <span>article 3</span>
+            <span class="title">article 3</span>
             <!-- date -->
-            <span>26/11/2019</span>
+            <span class="date">26/11/2019</span>
           </div>
         </article>
       </aside>
