ajout des transitions

--- a/index.html
+++ b/index.html
@@ -52,32 +52,47 @@
       <!-- bloc de gauche -->
       <aside>
         <!-- bloc article -->
-        <article style="background-image: url('assets/images/bitcoin.jpg');">
+        <a href="#" style="background-image: url('assets/images/bitcoin.jpg');">
           <div>
             <!-- titre -->
             <span class="title">article 1</span>
             <!-- date -->
             <span class="date">20/11/2019</span>
+            <span class="txt">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. <br />
+              Lire la suite ...
+            </span>
           </div>
-        </article>
+        </a>
         <!-- bloc article -->
-        <article style="background-image: url('assets/images/ca.jpg');">
+        <a href="#" style="background-image: url('assets/images/ca.jpg');">
           <div>
             <!-- titre -->
             <span class="title">article 2</span>
             <!-- date -->
             <span class="date">23/11/2019</span>
+            <span class="txt">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. <br />
+              Lire la suite ...
+            </span>
           </div>
-        </article>
+        </a>
         <!-- bloc article -->
-        <article style="background-image: url('assets/images/course.jpg');">
+        <a href="#" style="background-image: url('assets/images/course.jpg');">
           <div>
             <!-- titre -->
             <span class="title">article 3</span>
             <!-- date -->
             <span class="date">26/11/2019</span>
+            <span class="txt">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. <br />
+              Lire la suite ...
+            </span>
           </div>
-        </article>
+        </a>
       </aside>
 
       <!-- bloc de droite -->
