ajout du slider

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>CA Blog</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="style.css"></link>
   </head>
   <!-- Corp du HTML -->
@@ -115,7 +116,52 @@
           </blockquote>
         </div>
         <!-- slider -->
-        <div class="slider"></div>
+        <div class="slider">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="image" style="background-image: url('assets/images/kevinniel.jpg');">
+                    <span>Kévin N.</span>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+          </div>
+        </div>
       </section>
     </div>
 
@@ -137,5 +183,21 @@
         </ul>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script>
+      var mySwiper = new Swiper ('.swiper-container', {
+        loop: true,
+        slidesPerView: 3,
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+        autoplay: {
+          delay: 5000,
+        },
+        spaceBetween: 10,
+      })
+      </script>
   </body>
 </html>
