ajout du titre pour le staff

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </div>
         <!-- slider -->
         <div class="slider">
+          <h2 class="slider_title">Découvrez notre équipe !</h2>
           <!-- Slider main container -->
           <div class="swiper-container">
               <!-- Additional required wrapper -->
