ajout des icônes RS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css"></link>
   </head>
   <!-- Corp du HTML -->
@@ -42,6 +43,29 @@
           </li>
         </ul>
       </nav>
+      <!-- réseaux sociaux -->
+      <ul class="rs">
+        <li>
+          <a target="_blank" href="https://facebook.com" title="Facebook">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://twitter.com" title="Twitter">
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://instagram.com" title="Instagram">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com" title="Github">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+      </ul>
     </header>
 
     <!-- section image & titre -->
