ajout des liens et création des pages

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>CA Blog</title>
+    <link rel="icon" type="image/jpg" href="assets/images/ca.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
@@ -13,33 +14,33 @@
     <!-- header -->
     <header>
       <!-- image -->
-      <div class="logo">
+      <a href="index.html" class="logo">
         <img src="assets/images/logo_ca_100x100.png" alt="CA Blog" width="" height="" />
-      </div>
+      </a>
       <!-- menu -->
       <nav>
         <!-- liste à puces -->
         <ul class="niv_1">
           <li>
-            <a href="#" title="Accueil">Accueil</a>
+            <a href="index.html" title="Accueil">Accueil</a>
           </li>
           <li>
             <a href="#" title="Catégories">Catégories</a>
             <!-- sous liste à puce -->
             <ul class="niv_2">
               <li>
-                <a href="#" title="Bitcoin">Bitcoin</a>
+                <a href="bitcoin.html" title="Bitcoin">Bitcoin</a>
               </li>
               <li>
-                <a href="#" title="Campus Academy">Campus Academy</a>
+                <a href="ca.html" title="Campus Academy">Campus Academy</a>
               </li>
               <li>
-                <a href="#" title="Cours">Cours</a>
+                <a href="cours.html" title="Cours">Cours</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="#" title="Contact">Contact</a>
+            <a href="contact.html" title="Contact">Contact</a>
           </li>
         </ul>
       </nav>
