ajout du keyframe

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
     <!-- section image & titre -->
     <section class="header_title">
+      <div class="keyframe_anim"></div>
       <h1>Bienvenue sur le blog de <br /> Campus Academy</h1>
     </section>
 
